# subtitle-translator-cli

./: .env.cp  .gitignore  Cargo.toml  README.md  TEST.txt  output.srt  test.srt  test.txt  test2.srt  test3.srt  test_en.srt
src/: args.rs  config.rs  formatter.rs  handle.rs  handler.rs  lib.rs  main.rs  mock.rs  openai.rs  parse.rs  processor.rs  prompts.rs  subtitle_combiner.rs  subtitle_extractor.rs  subtitle_file.rs  text_splitter.rs  translator.rs  utils.rs  writer.rs
src/templates/: prompt.txt  user_message.txt
