[package]
name = "subtitle-translator-cli"
version = "0.1.0"
edition = "2021"
authors = ["Chen Tao<chentao020717Work@outlook.com>"]
license = "MIT"
description = "A tool to translate subtitle files"
readme = "README.md"
homepage = "https://github.com/eeee0717/subtitle-translator-cli"
repository = "https://github.com/eeee0717/subtitle-translator-cli"
keywords = ["cli", "subtitle", "translator"]
categories = ["command-line-utilities"]

[[bin]]
name = "stc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] } # creating a cli
subparse = { version = "0.7.0" }
async-openai = { version = "0.25.0" }
reqwest = "0.12.8"
tokio = { version = "*", features = ["full"] }
tera = { version = "1", default-features = false }
lazy_static = "1.5.0"
futures = "0.3"
thiserror = "1.0.65"
indicatif = "0.17.8"
anyhow = "1.0.93"
serde_json = "1.0.132"
serde = "1.0.215"
once_cell = "1.20.2"
